# SickleEditor

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  sicklegtk.desktop.in  sicklegtk.gschema.xml.in
data/windows/: CMakeLists.txt  resources.rc
gresource/: AppWin.glade  CMakeLists.txt  LuaConsole.css  MapArea2D.css  sicklegtk.gresource.xml.in
gresource/gtk/: OperationSearch.glade  TextureSelector.glade  menus.ui
gresource/gtk/MapArea2D/: CreateBrushPopupMenu.ui  SelectPopupMenu.ui
gresource/lua/: gdkevents.lua  gdkkeysyms.lua  gdktypes.lua
gresource/operations/: basic.lua
gresource/shaders/: map.frag  model.vert
src/: App.cpp  App.hpp  CMakeLists.txt  FreeCam.hpp  MapViewer.cpp  MapViewer.hpp  ModelViewer.cpp  ModelViewer.hpp  Module.hpp  OrbitCam.hpp  SickleApp.hpp  SoundPlayer.cpp  SoundPlayer.hpp  TextureViewer.cpp  TextureViewer.hpp  Transform.hpp  WADTextureViewer.cpp  WADTextureViewer.hpp  common.hpp  entitiesLump.cpp  entitiesLump.hpp  load_bsp.cpp  load_bsp.hpp  load_model.cpp  load_model.hpp  main.cpp  mdl2gl.cpp  mdl2gl.hpp  ui_helpers.cpp  ui_helpers.hpp  version.hpp.in
src/bsp/: CMakeLists.txt  bsp2gl.cpp  bsp2gl.hpp  entities_lump.cpp  entities_lump.hpp  load_bsp.cpp  load_bsp.hpp
src/config/: CMakeLists.txt  version.hpp.in
src/convexhull/: CMakeLists.txt  HalfPlane.cpp  convexhull.cpp  convexhull.hpp  facet_enumerate.cpp  vertex_enumerate.cpp
src/editor/: Brush.cpp  BrushBox.cpp  CMakeLists.txt  Editor.cpp  Entity.cpp  Face.cpp  Map.cpp  MapTools.cpp  Operation.cpp  Selection.cpp
src/editor/commands/: CMakeLists.txt  Commands.cpp  Commands.hpp
src/editor/core/: BrushBox.cpp  BrushBox.hpp  CMakeLists.txt  Editor.cpp  Editor.hpp  GameDefinition.cpp  GameDefinition.hpp  MapTools.cpp  MapTools.hpp  Selection.cpp  Selection.hpp
src/editor/interfaces/: CMakeLists.txt  Component.cpp  Component.hpp  EditorObject.cpp  EditorObject.hpp  Selectable.cpp  Selectable.hpp
src/editor/lua/: BrushBox_Lua.cpp  CMakeLists.txt  EditorBrush_Lua.cpp  Editor_Lua.cpp  Editor_Lua.hpp  Entity_Lua.cpp  Face_Lua.cpp  Selection_Lua.cpp
src/editor/operations/: CMakeLists.txt  Operation.cpp  Operation.hpp  OperationLoader.cpp  OperationLoader.hpp
src/editor/textures/: CMakeLists.txt  TextureInfo.cpp  TextureInfo.hpp  TextureManager.cpp  TextureManager.hpp
src/editor/world/: Brush.cpp  Brush.hpp  CMakeLists.txt  EditorWorld.hpp  Entity.cpp  Entity.hpp  Face.cpp  Face.hpp  Map.cpp  World.cpp  World.hpp
src/fgd/: CMakeLists.txt  fgd.cpp  fgd.hpp
src/fgd/parsing/: CMakeLists.txt  FGDDriver.hpp  parser.ypp
src/files/: CMakeLists.txt
src/files/fgd/: CMakeLists.txt  fgd.cpp  fgd.hpp
src/files/map/: CMakeLists.txt  load_map.cpp  map.hpp  mapsaver.cpp  mapsaver.hpp
src/files/rmf/: CMakeLists.txt  rmf.cpp  rmf.hpp
src/files/spr/: CMakeLists.txt  spr.cpp  spr.hpp  sprview.cpp
src/files/wad/: CMakeLists.txt  LumpTexture.cpp  LumpTexture.hpp  TextureManager.cpp  TextureManager.hpp  WADInputStream.hpp  WADReader.cpp  WADReader.hpp  load_wad.cpp  lumps.cpp  lumps.hpp  wad.hpp
src/glUtils/: Buffer.cpp  CMakeLists.txt  Program.cpp  Shader.cpp  Texture.cpp  VertexArray.cpp  glUtil.hpp
src/gtk/: CMakeLists.txt  appid.hpp.in  sicklegtk.desktop.in  sicklegtk.gschema.xml.in
src/gtk/classes/: About.cpp  About.hpp  App.cpp  App.hpp  AppWin.cpp  AppWin.hpp  CMakeLists.txt  LuaConsole.cpp  LuaConsole.hpp  MapArea.cpp  MapArea.hpp  MapArea2D.cpp  MapArea2D.hpp  MapArea3D.cpp  MapArea3D.hpp  MapTools.cpp  MapTools.hpp  WADDialog.cpp  WADDialog.hpp  gtkglutils.cpp  gtkglutils.hpp
src/gtk/gresource/: About.glade  CMakeLists.txt  sicklegtk.gresource.xml.in
src/gtk/lua/: AppWin_Lua.cpp  AppWin_Lua.hpp  CMakeLists.txt  GdkEvent_Lua.cpp  LuaGdkEvent.cpp  LuaGdkEvent.hpp  MapArea2D_Lua.cpp  MapArea2D_Lua.hpp
src/gtk/src/: CMakeLists.txt  appid.hpp.in  main.cpp
src/gtk/windows/: CMakeLists.txt  resources.rc
src/lua/: CMakeLists.txt  ReferenceManager.cpp  function.cpp  se-lua.cpp
src/lua/lua-geo/: CMakeLists.txt  LuaGeo.cpp  LuaGeo.hpp  matrix.cpp  vector.cpp  vector.hpp
src/map/: CMakeLists.txt  glmap.cpp  load_map.cpp  load_map.hpp  map2gl.cpp  map2gl.hpp  mapsaver.cpp  vertexmap.cpp
src/map/parsing/: CMakeLists.txt  MAPDriver.cpp  MAPDriver.hpp  MAPScanner.hpp  maplexer.lpp  mapparser.ypp
src/mdl/: CMakeLists.txt  load_model.cpp  load_model.hpp  mdl2gl.cpp  mdl2gl.hpp
src/modules/: BSPViewer.cpp  BSPViewer.hpp  Base3DViewer.hpp  CMakeLists.txt  MapViewer.cpp  MapViewer.hpp  ModelViewer.cpp  ModelViewer.hpp  Module.hpp  SoundPlayer.cpp  SoundPlayer.hpp  TextureViewer.cpp  TextureViewer.hpp  WADTextureViewer.cpp  WADTextureViewer.hpp
src/rmf/: CMakeLists.txt  rmf.cpp  rmf2map.cpp
src/se-lua/: CMakeLists.txt  ReferenceManager.cpp  function.cpp  function.hpp  se-lua.cpp  se-lua.hpp
src/se-lua/lua-geo/: CMakeLists.txt  LuaGeo.cpp  LuaGeo.hpp  matrix.cpp  vector.cpp  vector.hpp
src/se-lua/utils/: RefBuilder.hpp  ReferenceManager.hpp  Referenceable.hpp
src/spr/: CMakeLists.txt  sprview.cpp
src/spr/spr/: spr.cpp
src/util-apps/: CMakeLists.txt  GUI-main.cpp  Generic-main.cpp  ListEntities.cpp  LoadFGD.cpp  PrintMap.cpp  Sickle.cpp  ViewBSP.cpp  ViewMDL.cpp
src/utils/: App.hpp  BoundingBox.hpp  CMakeLists.txt  DebugDrawer3D.hpp  FreeCam.hpp  OrbitCam.hpp  TemplateUtils.hpp  Transform.hpp  gtkglutils.cpp  gtkglutils.hpp  ui_helpers.hpp
src/utils/utils/: BoundingBox.hpp  OrbitCam.hpp  TemplateUtils.hpp
src/wad/: CMakeLists.txt  TextureManager.cpp  TextureManager.hpp  load_wad.cpp  load_wad.hpp  lumps.cpp  lumps.hpp
src/world3d/: Brush.cpp  Brush.hpp  CMakeLists.txt  DeferredExec.cpp  DeferredExec.hpp  Entity.cpp  Entity.hpp  Face.cpp  Face.hpp  PointEntityBox.cpp  PointEntitySprite.cpp  RenderComponent.hpp  RenderComponentFactory.cpp  RenderComponentFactory.hpp  SolidEntity.cpp  Texture.cpp  Texture.hpp  Vertex.cpp  World.cpp  World.hpp  brush.cpp  entity.cpp  face.cpp  texture.cpp  vertex.cpp  world3d.cpp  world3d.hpp
src/world3d/raycast/: BoxCollider.cpp  BoxCollider.hpp  BoxColliderBrush.cpp  (+7 more)
windows/: CMakeLists.txt
(+257 files in other folders)
